[tool.poetry]
name = "aula06-bootcamp"
version = "0.1.0"
description = ""
authors = ["André Moraes <andrelamounier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.0.0"
isort = "^5.13.2"
taskipy = "^1.12.2"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort main.py 
black main.py 
flake8 main.py
"""
